deploy/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pyapp
  namespace: pyapp
spec:
  type: NodePort
  ports:
  - port: 9000
    targetPort: 9000
    protocol: TCP
    name: http
    nodePort: 30007 
  selector:
    app: pyapp
