deploy/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pyapp
  namespace: pyapp
spec:
  rules:
  - host: py-system.info
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pyapp
            port:
              number: 9000
